@@ -1,0 +1,4 @@
+perl Makefile.PL
+make test
+make install
+make realclean
