@@ -1,16 +1,17 @@
 --- #YAML:1.0
 name:                YAML-DBH
-version:             1.03
+version:             1.06
 abstract:            ~
 license:             ~
 author:              ~
 generated_by:        ExtUtils::MakeMaker version 6.44
 distribution_type:   module
 requires:     
-    DBI:                           1
-    Exporter:                      5
-    Test::Simple:                  0
-    YAML:                          0
+    DBD::mysql:                    3.0002
+    DBI:                           1.607
+    Exporter:                      5.58
+    Test::Simple:                  0.8
+    YAML:                          0.62
 meta-spec:
     url:     http://module-build.sourceforge.net/META-spec-v1.3.html
     version: 1.3
