@@ -5,13 +5,13 @@ WriteMakefile(
    VERSION_FROM => 'lib/YAML/DBH.pm',
 
 
-   # gen /usr/bin/pmused by Tue Aug 26 10:29:15 EDT 2008 
+   # gen /usr/bin/pmused by Tue Sep  9 15:57:37 EDT 2008 
    PREREQ_PM => {
-      'DBI'                               => '1',
-      'Exporter'                          => '5',
-      #'Smart::Comments'                   => '1.0.2',
-      'Test::Simple'                      => '0',
-      'YAML'                              => '0',
+      'DBD::mysql'                        => '3.0002',
+      'DBI'                               => '1.607',
+      'Exporter'                          => '5.58',
+      'Test::Simple'                      => '0.8',
+      'YAML'                              => '0.62',
    },
 
 
