@@ -1,3 +1,9 @@
+2008-09-09 14:53  cvs
+
+	* Makefile.PL, README, lib/YAML/DBH.pm, t/02_open_from_confhash.pl,
+	  t/02_open_from_confhash.t: made sure real db connect tests do not
+	  happen unless via cli
+
 2008-09-08 09:37  cvs
 
 	* lib/YAML/DBH.pm, t/02_open_from_confhash.t: Added capacity for
